# yapper

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  pytest.ini
assets/: README.md  yapper-tray.rgba
assets/voices/: ATTRIBUTION.md
docs/: agent-tts-tool.md  design.md  ipc.md  reuse-map.md  tts-api.md
fixtures/sanitize/: cases.txt  expected_python.txt  expected_rust.txt
python/: pyproject.toml  pytest.ini  requirements.txt
python/tests/: test_ipc.py  test_paths_models.py  test_pytest_markers.py  test_stt_smoke.py  test_stt_worker.py  test_tts_language.py  test_tts_sanitize.py  test_tts_smoke.py  test_tts_tones.py  test_tts_worker.py
python/yapper_common/: __init__.py  ipc.py  models.py  paths.py
python/yapper_stt/: __init__.py  __main__.py  worker.py
python/yapper_tts/: __init__.py  __main__.py  language.py  sanitize.py  tones.py  worker.py
scripts/: download_models.py  generate_default_reference.sh  gpu_soak.py  install_voices.sh  pytest  pytest-entry.py  smoke_self_contained_install.sh  smoke_ship_paths.sh  test_empty_home_pytest.sh  test_install_truth.sh  x11_paste_sink.py  yapper-tts
src/: app.rs  audio.rs  config.rs  hotkey_apply.rs  hotkeys.rs  ipc.rs  lifecycle.rs  main.rs  mic.rs  mpv_backend.rs  policy.rs  python_paths.rs  segment.rs  textprep.rs  timeouts.rs  transport.rs  transport_machine.rs  transport_tests.rs  tray.rs  wavutil.rs  workers.rs  x11util.rs  x11util_tests.rs
src/app/: frame.rs  jobs.rs  live_pids.rs  messages.rs  mod.rs  pipeline.rs  shell.rs  state.rs  tabs.rs  tts_api.rs  tts_controller.rs
src/app/pipeline/: jobs.rs  mod.rs  models.rs  playback.rs  record.rs  speak.rs
src/textprep/: mod.rs  parentheticals.rs  tests.rs
src/ui/: chrome.rs  helpers.rs  helpers_tests.rs  mod.rs  theme.rs
src/x11util_tests/: cases_insert.rs  cases_plan.rs  cases_selection.rs  mod.rs  support.rs
