[package]
name = "yapper"
version = "0.1.0"
edition = "2021"
description = "Local tray STT/TTS for Linux (Whisper + Chatterbox)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "yapper"
path = "src/main.rs"

[dependencies]
# Intentionally minimal until Phase 2. Add GUI/tray/hotkey crates then.
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
