[package]
name = "yapper"
version = "0.1.0"
edition = "2021"
description = "Local tray STT/TTS for Linux (Whisper + Chatterbox)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "yapper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
eframe = { version = "0.29", default-features = true, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.15"
global-hotkey = "0.6"
tray-icon = { version = "0.24.1", features = ["libxdo"] }
gtk = "0.18"
